--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,49 @@
-# Logs
-logs
-*.log
+# Terraform
+.terraform/
+.terraform.lock.hcl
+terraform.tfstate
+terraform.tfstate.backup
+terraform.tfvars
+*.tfplan
+
+# Local .env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Node.js
+node_modules/
+dist/
+build/
+coverage/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+
+# Logs
+logs
+*.log
+
+# Editor directories and files
+.idea/
+.vscode/
+*.swp
+*.swo
+*.swn
+*.bak
+
+# OS files
+.DS_Store
+Thumbs.db
 
 # Dependencies
-node_modules
 .pnp
 .pnp.js
 
 # Build artifacts
-dist
 dist-ssr
-build
 *.local
 
 # Environment variables
@@ -62,4 +90,3 @@ Thumbs.db
 .cache/
 .parcel-cache
 .eslintcache
-.env
